--- a/feature.html
+++ b/feature.html
@@ -94,15 +94,15 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
-                    <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="display-5 mb-2">Services</h1>
+                    <h1 class="mb-4">We Focused On Modern Architecture And Interior Design</h1>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
                                 <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Design Approach</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <h3>Architectural Design</h3>
+                                    <p class="mb-0">Our team of talented architects employs creativity and precision to design spaces that are not only beautiful but also functional. From conceptual sketches to detailed plans, we bring your vision to life.</p>
                                 </div>
                             </div>
                         </div>
@@ -110,8 +110,8 @@
                             <div class="d-flex align-items-start">
                                 <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Innovative Solutions</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <h3>Construction</h3>
+                                    <p class="mb-0">We are experts in turning architectural designs into tangible structures. Our construction team is skilled in the latest building techniques, ensuring the highest quality of workmanship.</p>
                                 </div>
                             </div>
                         </div>
@@ -119,8 +119,17 @@
                             <div class="d-flex align-items-start">
                                 <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Project Management</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <h3>Interior Design</h3>
+                                    <p class="mb-0">Our interior designers create harmonious, inviting spaces that reflect your style and needs. Whether you're looking to transform your home, office, or any other space, our team of talented designers is here to turn your vision into reality. We understand the importance of creating an environment that not only looks beautiful but also functions seamlessly, ensuring your space is a true reflection of your personality and requirements. Let us bring your dream interior to life.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="d-flex align-items-start">
+                                <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
+                                <div class="ms-4">
+                                    <h3>Conservation and restoration </h3>
+                                    <p class="mb-0">Whether it's breathing new life into an old building or preserving historical structures, we excel in renovation and restoration projects that honor the past while meeting modern standards.</p>
                                 </div>
                             </div>
                         </div>
@@ -143,10 +152,11 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Address</h3>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <h2 class="text-light mb-4">Address</h2>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Khartoum , Sudan</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Rome , Italy</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-2"></i>+24999964298</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-2"></i>sketchhome@yahoo.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -172,7 +182,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Newsletter</h3>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -184,11 +193,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
+                        &copy; <a href="#">SketchHome</a>, All Right Reserved.
                     </div>
                 </div>
             </div>
