--- a/index.html
+++ b/index.html
@@ -431,7 +431,6 @@
                                     <p><i class="fa fa-check text-primary me-2"></i> Location : Omdurman  </p>
                                     <p><i class="fa fa-check text-primary me-2"></i>Plot area : 580 m2</p>
                                     <p><i class="fa fa-check text-primary me-2"></i>Design : Sketch Home Architecture Design & Engineering</p>
-                                    <p><i class="fa fa-check text-primary me-2"></i>Mr. Hussain Mohamed Ali</p>
                                     <p><i class="fa fa-check text-primary me-2"></i>Re Design Exterior and Interior 2018 </p>
                                     <p><i class="fa fa-check text-primary me-2"></i>The project : conference room for 57 people</p>
                                     <p><i class="fa fa-check text-primary me-2"></i>Implementation : Fram Engineering and Contracting Company</p>
@@ -469,8 +468,8 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
-                            <span class="text-primary">Designation</span>
+                            <h3 class="mt-2">Ibrahim Alhassen</h3>
+                            <span class="text-primary">Architect</span>
                         </div>
                     </div>
                 </div>
@@ -485,8 +484,8 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
-                            <span class="text-primary">Designation</span>
+                            <h3 class="mt-2">Abdallah Huiessen</h3>
+                            <span class="text-primary">Civil Engineer</span>
                         </div>
                     </div>
                 </div>
@@ -501,8 +500,8 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
-                            <span class="text-primary">Designation</span>
+                            <h3 class="mt-2">Emad Shams Eldeen</h3>
+                            <span class="text-primary">Electromechanical Engineer</span>
                         </div>
                     </div>
                 </div>
@@ -517,8 +516,8 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
-                            <span class="text-primary">Designation</span>
+                            <h3 class="mt-2">Mohamed Mahmoud</h3>
+                            <span class="text-primary">Survey Engineer</span>
                         </div>
                     </div>
                 </div>
@@ -642,10 +641,11 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Address</h3>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <h2 class="text-light mb-4">Address</h2>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Khartoum , Sudan</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Rome , Italy</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-2"></i>+24999964298</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-2"></i>sketchhome@yahoo.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -671,7 +671,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Newsletter</h3>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -683,12 +682,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                        <br> Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                        &copy; <a href="#">SketchHome</a>, All Right Reserved.
                     </div>
                 </div>
             </div>
