--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown">Architecture Design</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
@@ -95,7 +95,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown">Interior Design</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
@@ -109,7 +109,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown">Furniture Design </h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
@@ -533,8 +533,15 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Appointment</h4>
-                    <h1 class="display-5 mb-4">Make An Appointment To Start Your Dream Project</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="display-5 mb-4">Make An Appointment To Start Your Dream Project !</h1>
+                    <p>We are excited to help you turn your dream project into a reality. We offer a wide range of architectural design services, including:</p>
+                    <ul>
+                        <li>Home design</li>
+                        <li>Commercial design</li>
+                        <li>Renovations</li>
+                        <li>Additions</li>
+                    </ul>
+                    <p>We have a team of experienced and talented architects who are passionate about creating beautiful and functional spaces. We will work with you closely to understand your needs and create a design that you will love.</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex">
@@ -543,7 +550,7 @@
                                 </div>
                                 <div class="ms-4">
                                     <p class="mb-2">Call Us Now</p>
-                                    <h3 class="mb-0">+012 345 6789</h3>
+                                    <h3 class="mb-0">+249999964298</h3>
                                 </div>
                             </div>
                         </div>
@@ -554,7 +561,7 @@
                                 </div>
                                 <div class="ms-4">
                                     <p class="mb-2">Mail Us Now</p>
-                                    <h3 class="mb-0">info@example.com</h3>
+                                    <h3 class="mb-0">sketchhome@yahoo.com</h3>
                                 </div>
                             </div>
                         </div>
@@ -574,9 +581,10 @@
                         <div class="col-12 col-sm-6">
                             <select class="form-select" style="height: 55px;">
                                 <option selected>Choose Service</option>
-                                <option value="1">Service 1</option>
-                                <option value="2">Service 2</option>
-                                <option value="3">Service 3</option>
+                                <option value="1">Home design</option>
+                                <option value="2">Commercial design</option>
+                                <option value="3">Renovations</option>
+                                <option value="4">Additions</option>
                             </select>
                         </div>
                         <div class="col-12 col-sm-6">
@@ -616,18 +624,13 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Exceptional design seamlessly blending elegance and practical functionality through Sketch Home's architectural design services has added a unique and sophisticated touch to my home, making it a place that reflects refined taste and provides unparalleled comfort .</p>
+                    <h3>Mohamed Ali</h3>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
-                    <span class="text-primary">Profession</span>
-                </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Sketch Home has added an exceptional artistic touch to my home, combining refined architectural design with remarkable functionality, creating a unique and distinctive living experience .</p>
+                    <h3>Mohamed Amin</h3>
                     <span class="text-primary">Profession</span>
                 </div>
             </div>      
