--- a/testimonial.html
+++ b/testimonial.html
@@ -100,18 +100,13 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Exceptional design seamlessly blending elegance and practical functionality through Sketch Home's architectural design services has added a unique and sophisticated touch to my home, making it a place that reflects refined taste and provides unparalleled comfort .</p>
+                    <h3>Mohamed Ali</h3>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
-                    <span class="text-primary">Profession</span>
-                </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Sketch Home has added an exceptional artistic touch to my home, combining refined architectural design with remarkable functionality, creating a unique and distinctive living experience .</p>
+                    <h3>Mohamed Amin</h3>
                     <span class="text-primary">Profession</span>
                 </div>
             </div>      
