--- a/appointment.html
+++ b/appointment.html
@@ -93,7 +93,15 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Appointment</h4>
-                    <h1 class="display-5 mb-4">Make An Appointment To Start Your Dream Project</h1>
+                    <h1 class="display-5 mb-4">Make An Appointment To Start Your Dream Project !</h1>
+                    <p>We are excited to help you turn your dream project into a reality. We offer a wide range of architectural design services, including:</p>
+                    <ul>
+                        <li>Home design</li>
+                        <li>Commercial design</li>
+                        <li>Renovations</li>
+                        <li>Additions</li>
+                    </ul>
+                    <p>We have a team of experienced and talented architects who are passionate about creating beautiful and functional spaces. We will work with you closely to understand your needs and create a design that you will love.</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex">
@@ -133,9 +141,10 @@
                         <div class="col-12 col-sm-6">
                             <select class="form-select" style="height: 55px;">
                                 <option selected>Choose Service</option>
-                                <option value="1">Service 1</option>
-                                <option value="2">Service 2</option>
-                                <option value="3">Service 3</option>
+                                <option value="1">Home design</option>
+                                <option value="2">Commercial design</option>
+                                <option value="3">Renovations</option>
+                                <option value="4">Additions</option>
                             </select>
                         </div>
                         <div class="col-12 col-sm-6">
