--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown">Architecture Design</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Indulge in a unique artistic masterpiece that reflects your dreams and needs with our distinctive architectural design services. At Sketch Home, we offer exceptional design experiences that enable our clients to transform their ideas into tangible reality. Through creativity and innovation, we design spaces that are both unique and functional, combining beauty and performance. Discover with us how our architectural design can add an individual touch and enhance the quality of your life in every detail.</p>
+                                <a href="ArchitectureDesign.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -96,8 +96,8 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown">Interior Design</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">At Sketch Home, we offer distinctive interior design services tailored to various project types. Our design team reflects innovation and attention to detail in every project, whether for residential homes, commercial spaces, hotel projects, or others. We strive to achieve the perfect balance between elegance and practical functionality, creating interior environments that meet the aspirations of our clients. Whether you're planning to renovate your current space or embark on a new project, we provide a unique and customized solution for each client, adding an artistic touch that combines comfort and luxury. Discover how our interior design can transform your dreams into a splendid reality.</p>
+                                <a href="InteriorDesign.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -110,8 +110,8 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown">Furniture Design </h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">At Sketch Home, we offer distinctive furniture design services that cater to the diverse needs of various projects. Our design team stands out for its creativity and precision in crafting furniture, whether for residential homes, commercial spaces, hotel projects, or more. We strive diligently to achieve a unique balance between style and functionality, creating furniture that exudes beauty and uniqueness while seamlessly aligning with the vision of our clients. Whether you're planning to renovate your current space or embark on a new project, we provide a customized solution for each client, adding an aesthetic touch that enhances the living experience. Discover how our furniture design can elevate the quality of spaces and make them uniquely remarkable.</p>
+                                <a href="FurnitureDesign.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -453,71 +453,147 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h4 class="section-title">Team Members</h4>
-                <h1 class="display-5 mb-4">We Are Creative Architecture Team For Your Dream Home</h1>
+                <h1 class="section-title">Our customers </h1>
+                <p> We are committed to providing the best services to our customers, and we believe that our success depends on their success. We always strive to understand their needs and desires, and provide innovative solutions that meet their requirements</p>
             </div>
             <div class="row g-0 team-items">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
-                            <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <img class="img-fluid" src="img/dpi.jpg" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Ibrahim Alhassen</h3>
-                            <span class="text-primary">Architect</span>
+                            <h3 class="mt-2">DPI</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
-                            <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <img class="img-fluid" src="img/JCB-Logo.jpg" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Abdallah Huiessen</h3>
-                            <span class="text-primary">Civil Engineer</span>
+                            <h3 class="mt-2">JCB</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-3.jpg" alt="">
-                            <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <img class="img-fluid" src="img/aps.png" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Emad Shams Eldeen</h3>
-                            <span class="text-primary">Electromechanical Engineer</span>
+                            <h3 class="mt-2">APS</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-4.jpg" alt="">
-                            <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <img class="img-fluid" src="img/safatGroup.jpg" alt="">
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Mohamed Mahmoud</h3>
-                            <span class="text-primary">Survey Engineer</span>
+                            <h3 class="mt-2">Safat Aviation Complex</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/SAFATFINAL.png" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">Safat College of Science and Technology</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/highLevel.png" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">High Level Aviation Academys</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/qatar.PNG" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">Qatari Military Attache Khartoum</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/leleas.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h3 class="mt-2">LELAS Perfumes</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="section-title">Parterners</h1>
+                <p>We believe that our success is our partners' success, so we are committed to building strong partnerships with them based on trust and mutual respect. We always strive to cooperate with our partners to provide the best services to our customers and achieve our common goals.</p>
+            </div>
+            <div class="row g-0 team-items">
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/almaymoon.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">AlMaymoon Concrete Co.</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/dorado.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Dorado Multi Activities Co.</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/smartHome.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Smart Home</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/modren.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Modern Systems Sudan</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item position-relative">
+                        <div class="position-relative">
+                            <img class="img-fluid" src="img/frame.jpg" alt="">
+                        </div>
+                        <div class="bg-light text-center p-4">
+                            <h4 class="mt-2">Frame Company Ltd</h4>
                         </div>
                     </div>
                 </div>
