--- a/project.html
+++ b/project.html
@@ -119,7 +119,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/1.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/3.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -139,7 +139,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/2.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/heussin.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -160,7 +160,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/3.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/2.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
